k8s/newblog-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: newblog-deployment
  labels:
    app: newblog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: newblog
  template:
    metadata:
      labels:
        app: newblog
    spec:
      containers:
      - name: newblog
        image: mammarraza/nodejs-project-cms:latest
        ports:
        - containerPort: 5001
