k8s/newblog-ingress-ssl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-eks-newblog
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:851725492879:certificate/6ed4dd15-5525-4349-ae48-9f10928bb98a
spec:
  ingressClassName: alb
  rules:
  - host: app.raza.exportthreads.live
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: newblog-service
            port:
              number: 5001
